--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --watch --host 0.0.0.0 --poll 1000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
